--- a/myworknode/mywork/知识网站/网站.html
+++ b/myworknode/mywork/知识网站/网站.html
@@ -152,10 +152,10 @@
     <tr>
         <td><a href="https://www.juhe.cn/account/certify">聚合数据 调用网上的数据</a></td>
         <td><a href="https://www.v2ex.com/t/309935">iView UI组件  中后台</a></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td><a href="http://www.cnblogs.com/nifengs/p/5104763.html">window.location.hash的用法s</a></td>
+        <td><a href="http://www.xuanfengge.com/js-skills-notes-eight.html#more-6670">JS实用技巧手记</a></td>
+        <td><a href="http://www.softwhy.com/forum.php?mod=viewthread&tid=6191">window.onload</a></td>
+        <td><a href="http://www.xuanfengge.com/tag/js%E6%89%8B%E8%AE%B0">JS实用技巧手记</a></td>
         <td></td>
         <td></td>
         <td></td>
