--- a/myworknode/mywork/learndemo/1-10/动态title.html
+++ b/myworknode/mywork/learndemo/1-10/动态title.html
@@ -2,18 +2,40 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
     <title></title>
-
+    <style>
+        *{
+            margin: 0;
+            padding:0;
+        }
+        header{
+            width: 100%;
+            height: 50px;
+            text-align: center;
+            background:grey;
+        }
+        header span{
+            font-size: 20px;
+            top:50%;
+        }
+    </style>
 </head>
 <body>
+    <header>
+        <img src="" alt="">
+        <span>请登录</span>
+    </header>
     <script>
        function flashTitle(){
          time=new Date();
          str=time.getHours()+':'+time.getMinutes()+':'+time.getSeconds();
           document.title='我是'+str;
           setTimeout('flashTitle()',1000);
+          console.log(document.title='我是');
        }
-      flashTitle();
+//      flashTitle();
+        window.document.title = "我的登录";
     </script>
 </body>
 </html>
